Fixed overflow and codestyle

--- a/html/static/profile.css
+++ b/html/static/profile.css
@@ -1,4 +1,4 @@
-b {
+.profile__userinfo__row-field__key {
     font-size: 17px;
 }
 
@@ -14,7 +14,7 @@ b {
         width: 620px;
     }
 
-    .profile-userinfo__row-field__value {
+    .profile__userinfo__row-field__value {
         margin-block-start: 8px;
         font-size: 17px;
     }
@@ -25,7 +25,7 @@ b {
         width: 90vw;
     }
     
-    .profile-userinfo__row-field__value {
+    .profile__userinfo__row-field__value {
         margin-block-start: 4px;
         font-size: 15px;
     }
@@ -37,23 +37,23 @@ b {
     }
 }
 
-.profile-header {
+.profile__header {
     padding: 10px;
     font-weight: normal;
 }
 
-.profile-userinfo {
+.profile__userinfo {
     padding: 10px;
     border-top: 1px solid var(--border-gray);
     border-bottom: 1px solid var(--border-gray);
 }
 
-.profile-userinfo__row {
+.profile__userinfo__row {
     display: flex;
     padding-left: 10px;
 }
 
-.profile-userinfo__row-field {
+.profile__userinfo__row-field {
     flex-basis: 50%;
     margin-bottom: 12px;
 }
